force-app/main/default/objects/Booking_Unit__c/fields/Reserved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Date_Time__c</fullName>
    <description>This field is to capture the Booking unit status changed to Reserved Date Time - related to CCO dashboard reports</description>
    <label>Reserved Date Time</label>
    <type>DateTime</type>
</CustomField>