force-app/main/default/objects/Booking_Unit__c/fields/Reserved_to_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Reserved_to_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reserved to Cancel</label>
    <type>Checkbox</type>
</CustomField>