force-app/main/default/objects/Booking_Unit__c/fields/SalesCon_Com__c.field-meta.xml
<CustomField>
    <fullName>SalesCon_Com__c</fullName>
    <description>This field is populated when the booking unit status become sold.</description>
    <inlineHelpText>This field data used to send Yardi</inlineHelpText>
    <label>Sales Consultant Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>