force-app/main/default/objects/Booking_Unit__c/fields/SalesCon_Com_Perc__c.field-meta.xml
<CustomField>
    <fullName>SalesCon_Com_Perc__c</fullName>
    <description>This field is populated when unit status become SOLD.</description>
    <inlineHelpText>This field used to send data to Yardi</inlineHelpText>
    <label>Sales Consultant Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>