force-app/main/default/objects/Booking_Unit__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <description>Before Project Migration changes :- 
IF( RecordType.Name == &apos;Land&apos;, Inventory__r.Project__r.Seller_Name__c, Inventory__r.Property__r.Project__r.Seller_Name__c)</description>
    <formula>IF( RecordType.Name == &apos;Land&apos;, Inventory__r.Project_Inv__r.Seller_Name__c, Inventory__r.Property_Inv__r.Project_Inv__r.Seller_Name__c)</formula>
    <label>Seller Name</label>
    <type>Text</type>
</CustomField>