force-app/main/default/objects/Booking_Unit__c/fields/Service_charge_waiver__c.field-meta.xml
<CustomField>
    <fullName>Service_charge_waiver__c</fullName>
    <label>Service charge waiver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>