force-app/main/default/objects/Booking_Unit__c/fields/SF_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>SF_Unit_Code__c</fullName>
    <formula>Inventory__r.SF_Unit_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Unit Code</label>
    <type>Text</type>
</CustomField>