force-app/main/default/objects/Booking_Unit__c/fields/Skip_Booking_Automation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Booking_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when manually creating test records to skip automatic status updates</description>
    <label>Skip Booking Automation</label>
    <type>Checkbox</type>
</CustomField>