force-app/main/default/objects/Booking_Unit__c/fields/Skip_Doc_Verification__c.field-meta.xml
<CustomField>
    <fullName>Skip_Doc_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Doc Verification</label>
    <type>Checkbox</type>
</CustomField>