force-app/main/default/objects/Booking_Unit__c/fields/Sold_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Sold_Date_Only__c</fullName>
    <description>This field created for the Audit report Dp Master Sales Report</description>
    <formula>DATEVALUE( Sold_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold Date</label>
    <type>Date</type>
</CustomField>