force-app/main/default/objects/Booking_Unit__c/fields/Sold_To_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to keep flag when status changed from Sold to Cancel</description>
    <label>Sold To Cancel</label>
    <type>Checkbox</type>
</CustomField>