force-app/main/default/objects/Booking_Unit__c/fields/Submitted_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted for Cancellation</label>
    <type>Checkbox</type>
</CustomField>