force-app/main/default/objects/Booking_Unit__c/fields/Token_BU__c.field-meta.xml
<CustomField>
    <fullName>Token_BU__c</fullName>
    <label>Token (BU)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>