force-app/main/default/objects/Booking_Unit__c/fields/Token_JO__c.field-meta.xml
<CustomField>
    <fullName>Token_JO__c</fullName>
    <label>Token (JO)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>