force-app/main/default/objects/Booking_Unit__c/fields/Token_PP__c.field-meta.xml
<CustomField>
    <fullName>Token_PP__c</fullName>
    <label>Token (PP)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>