force-app/main/default/objects/Booking_Unit__c/fields/Trust_Account__c.field-meta.xml
<CustomField>
    <fullName>Trust_Account__c</fullName>
    <formula>Inventory__r.Property_Inv__r.Trust_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Account</label>
    <type>Text</type>
</CustomField>