force-app/main/default/objects/Booking_Unit__c/fields/Uniq_Key__c.field-meta.xml
<CustomField>
    <fullName>Uniq_Key__c</fullName>
    <externalId>true</externalId>
    <label>Uniq Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>