force-app/main/default/objects/Booking_Unit__c/fields/Unique_code__c.field-meta.xml
<CustomField>
    <fullName>Unique_code__c</fullName>
    <label>Unique code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>