force-app/main/default/objects/Booking_Unit__c/fields/Unit_Area__c.field-meta.xml
<CustomField>
    <fullName>Unit_Area__c</fullName>
    <description>Old Formula - Inventory__r.Unit_Area_Sqft__c</description>
    <formula>Inventory__r.NSA_Area_Sqft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Area</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>