force-app/main/default/objects/Booking_Unit__c/fields/Unit_Cancellation_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cancellation_Status__c</fullName>
    <description>This field will be set to &quot;Cancellation/pending for Repricing&quot; upon initiation of cancellation approval workflow.</description>
    <formula>IF(
   AND(
      TEXT(Booking_Unit_Status__c) = &quot;Sold&quot;,
      Submitted_for_Cancellation__c
   ),
   &quot;Cancelled/pending for Repricing&quot;, 
   TEXT(Booking_Unit_Status__c)
)</formula>
    <label>Unit Cancellation Status</label>
    <type>Text</type>
</CustomField>