force-app/main/default/objects/Booking_Unit__c/fields/UpGraded__c.field-meta.xml
<CustomField>
    <fullName>UpGraded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when unit is up graded - true</description>
    <label>UpGraded</label>
    <type>Checkbox</type>
</CustomField>