force-app/main/default/objects/Booking_Unit__c/fields/UpGraded_Booking_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>UpGraded_Booking_Unit_Price__c</fullName>
    <label>UpGraded Booking Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>