force-app/main/default/objects/Booking_Unit__c/fields/X18_digit_id__c.field-meta.xml
<CustomField>
    <fullName>X18_digit_id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 digit id</label>
    <type>Text</type>
</CustomField>