force-app/main/default/objects/Booking_Unit__c/fields/X2nd_PDC_Submitted__c.field-meta.xml
<CustomField>
    <fullName>X2nd_PDC_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is integrated with Yardi</inlineHelpText>
    <label>2nd PDC Submitted(DO NOT USE)</label>
    <type>Checkbox</type>
</CustomField>