force-app/main/default/objects/Booking_Unit__c/fields/Yardi_Booking_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Booking_Code__c</fullName>
    <externalId>true</externalId>
    <label>Yardi Booking Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>