force-app/main/default/objects/Booking_Unit__c/fields/Yardi_Message__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Message__c</fullName>
    <label>Yardi Message(BU)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>