force-app/main/default/objects/Booking_Unit__c/fields/Yardi_Message_JO__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Message_JO__c</fullName>
    <label>Yardi Message(JO)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>