force-app/main/default/objects/Booking_Unit__c/fields/Yardi_Paymnt_Plan_Batch_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Paymnt_Plan_Batch_Code__c</fullName>
    <label>Yardi Payment Plan Batch Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>