force-app/main/default/objects/Booking_Unit__c/recordTypes/Booking_Unit_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Booking_Unit_Read_Only</fullName>
    <active>true</active>
    <label>Booking Unit Read Only</label>
</RecordType>